--- a/app/src/main/res/layout-w900dp/event_detail.xml
+++ b/app/src/main/res/layout-w900dp/event_detail.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        android:background="@color/saffron_50"
        >
         <ImageView
             android:id="@+id/eventBookmark"
@@ -26,7 +27,7 @@
             android:src="@drawable/ic_baseline_bookmark_24"
             android:layout_marginTop="@dimen/large_margin"
             />
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/eventTextIncrease"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,6 +40,29 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/large_margin"
             android:src="@drawable/ic_baseline_format_size_24"
+            />-->
+        <TextView
+            android:id="@+id/eventTextIncrease"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="A+"
+            style="@style/TextAppearance.AppCompat.Button"
+            android:textSize="@dimen/text_size_1"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/large_margin"
+
+            />
+
+        <TextView
+            android:id="@+id/eventTextDecrease"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="A-"
+            style="@style/TextAppearance.AppCompat.Button"
+            android:textSize="@dimen/text_size_1"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/large_margin"
+
             />
     </LinearLayout>
 
