--- a/app/src/main/res/layout/event_content.xml
+++ b/app/src/main/res/layout/event_content.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/basic_padding">
@@ -8,13 +9,18 @@
     <ImageView
         android:id="@+id/eventImage"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:transitionName="imageTransaction"
+        tools:targetApi="lollipop" />
 
     <TextView
         android:id="@+id/eventYear"
         style="@style/subtitle"
         android:layout_toEndOf="@+id/eventImage"
-        android:layout_toRightOf="@+id/eventImage" />
+        android:layout_toRightOf="@+id/eventImage"
+        android:transitionName="yearTransaction"
+        tools:targetApi="lollipop"
+        />
 
     <TextView
         android:id="@+id/eventName"
@@ -23,7 +29,9 @@
         android:layout_toEndOf="@+id/eventImage"
         android:layout_toRightOf="@+id/eventImage"
         android:paddingTop="@dimen/small_padding"
-        app:fontFamily="@font/montserrat" />
+        android:transitionName="titleTransaction"
+        app:fontFamily="@font/montserrat"
+        tools:targetApi="lollipop"/>
 
     <ImageView
         android:layout_width="wrap_content"
