--- a/app/src/main/res/layout/fragment_list_home_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_list_home_bookmarks.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <include layout="@layout/event_list" />
     </FrameLayout>
 
