--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,7 @@
             android:icon="@drawable/ic_baseline_bookmarks_24"
             android:title="Bookmarks" />
         <item
+            android:icon="@drawable/ic_baseline_info_24"
             android:id="@+id/nav_about"
             android:title="About" />
     </group>
