--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,23 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
         <item name="fontFamily">@font/montserrat</item>
+
+        <item name="android:windowActivityTransitions" tools:ignore="NewApi">true</item>
     </style>
+    <style name="Dark" parent="ThemeOverlay.AppCompat.Dark">
+        <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="titleEnabled">false</item>
+        <item name="colorPrimary">@color/blue_700</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="fontFamily">@font/montserrat</item>
+
+        <item name="android:windowActivityTransitions" tools:ignore="NewApi">true</item>
+    </style>
+
 
     <style name="subtitle" parent="AppTheme">
         <item name="android:layout_width">wrap_content</item>
@@ -27,7 +43,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">@dimen/basic_padding</item>
-        <item name="android:textSize">21dp</item>
+        <item name="android:textSize">21sp</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light.ActionBar" >
